--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ configparser==3.5.0
 Django==1.11.4
 enum34==1.1.6
 flake8==3.5.0
+gunicorn==19.7.1
 -e git+https://chromium.googlesource.com/external/gyp#egg=gyp
 idna==2.6
 mccabe==0.6.1
@@ -14,7 +15,7 @@ psycopg2==2.7.3.2
 pycodestyle==2.3.1
 pycurl==7.43.0
 pyflakes==1.6.0
-pytz==2017.2
+pytz==2017.3
 requests==2.18.4
 shutilwhich==1.1.0
 sqlparse==0.2.2
