--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ backports.shutil-get-terminal-size==1.0.0
 certifi==2017.11.5
 chardet==3.0.4
 configparser==3.5.0
+dj-static==0.0.6
 Django==1.11.4
 enum34==1.1.6
 flake8==3.5.0
@@ -19,6 +20,7 @@ pytz==2017.3
 requests==2.18.4
 shutilwhich==1.1.0
 sqlparse==0.2.2
+static3==0.7.0
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
